--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     },
     "dependencies": {
         "@types/hammerjs": "^2.0.39",
-        "hammerjs": "^2.0.8"
+        "autoprefixer": "^10.3.1",
+        "hammerjs": "^2.0.8",
+        "tailwindcss": "^2.2.7"
     }
 }
