--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.4",
         "@types/jquery": "^3.5.5",
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
