--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
+        "@fontsource/quicksand": "^4.5.1",
         "@types/hammerjs": "^2.0.39",
         "autoprefixer": "^10.3.1",
         "hammerjs": "^2.0.8",
