--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "@fontsource/quicksand": "^4.5.1",
         "@types/hammerjs": "^2.0.39",
         "autoprefixer": "^10.3.1",
-        "hammerjs": "^2.0.8",
-        "tailwindcss": "^2.2.7"
+        "hammerjs": "^2.0.8"
     }
 }
