--- a/package.json
+++ b/package.json
@@ -13,17 +13,14 @@
         "@fortawesome/fontawesome-free": "^5.15.4",
         "@types/jquery": "^3.5.5",
         "axios": "^0.21",
-        "bootstrap": "^4.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^6.0.27",
-        "lodash": "^4.17.19",
-        "popper.js": "^1.12",
-        "postcss": "^8.3.6",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "ts-loader": "^9.1.1",
-        "typescript": "^4.2.4"
+        "typescript": "^4.2.4",
+        "uikit": "^3.3.0"
     },
     "dependencies": {
         "@fontsource/quicksand": "^4.5.1",
