--- a/package.json
+++ b/package.json
@@ -10,22 +10,20 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@fontsource/quicksand": "^4.5.1",
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "@types/hammerjs": "^2.0.39",
         "@types/jquery": "^3.5.5",
-        "axios": "^0.21",
-        "jquery": "^3.2",
-        "laravel-mix": "^6.0.27",
+        "@types/uikit": "^3.3.2",
+        "autoprefixer": "^10.3.4",
+        "axios": "^0.21.4",
+        "hammerjs": "^2.0.8",
+        "laravel-mix": "^6.0.29",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
+        "sass": "^1.39.0",
         "sass-loader": "^11.0.1",
         "ts-loader": "^9.1.1",
-        "typescript": "^4.2.4",
+        "typescript": "^4.4.2",
         "uikit": "^3.3.0"
-    },
-    "dependencies": {
-        "@fontsource/quicksand": "^4.5.1",
-        "@types/hammerjs": "^2.0.39",
-        "autoprefixer": "^10.3.1",
-        "hammerjs": "^2.0.8"
     }
 }
