--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 /node_modules
 /public/hot
 /public/storage
-/public/css
-/public/js
-/public/main.js
+/public/static/css
+/public/static/js
+/public/static/fonts
 /public/mix-manifest.json
-/public/fonts
 /storage/*.key
 /vendor
 /.idea
