--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/assets
 /node_modules
 /public/hot
 /public/storage
@@ -5,6 +6,7 @@
 /public/static/js
 /public/static/fonts
 /public/mix-manifest.json
+/public/worker.js
 /storage/*.key
 /vendor
 /.idea
