--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "sass-loader": "^11.0.1",
         "ts-loader": "^9.1.1",
         "typescript": "^4.4.3"
+    },
+    "dependencies": {
+        "@fontsource/inter": "^4.5.0"
     }
 }
